--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^7.0.8",
     "autoprefixer": "^10.4.15",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
     "esbuild": "^0.19.3",
+    "jquery": "^3.7.1",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.29",
     "postcss-cli": "^10.1.0",
